# AstrodbKit

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  sync_tag.sh  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: python-publish.yml  test-package.yml
astrodbkit/: astrodb.py  schema_example.py  utils.py
astrodbkit/tests/: test_astrodb.py  test_spectra.py  test_utils.py  test_views.py
astrodbkit2/: __init__.py  astrodb.py  schema.py  schema_example.py  spectra.py  utils.py  views.py
astrodbkit2/tests/: test_astrodb.py  test_spectra.py  test_utils.py  test_views.py
docs/: astrodb.rst  conf.py  index.rst  spectra.rst  utils.rst
docs/astrodbkit2/: index.rst
licenses/: LICENSE.rst
