[build-system]

requires = ["setuptools",
            "setuptools_scm",
            "wheel",
            "extension-helpers",
            "oldest-supported-numpy",
            "cython>=0.29.15"]

build-backend = 'setuptools.build_meta'

[tool.darker]
line-length = 120

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]