[metadata]
name = astrodbkit2
author = David Rodriguez
author_email = drodriguez@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url =  
description = Astronomical database handler code
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = dr-rodriguez/AstrodbKit2

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    sqlalchemy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
astrodbkit2 = data/*

[tool:pytest]
testpaths = "astrodbkit2" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    astrodbkit2/_astropy_init*
    astrodbkit2/conftest.py
    astrodbkit2/*setup_package*
    astrodbkit2/tests/*
    astrodbkit2/*/tests/*
    astrodbkit2/extern/*
    astrodbkit2/version*
    */astrodbkit2/_astropy_init*
    */astrodbkit2/conftest.py
    */astrodbkit2/*setup_package*
    */astrodbkit2/tests/*
    */astrodbkit2/*/tests/*
    */astrodbkit2/extern/*
    */astrodbkit2/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
