[metadata]
name = astrodbkit
author = David Rodriguez
author_email = drodriguez@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url =  
description = Astronomical database handler code
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astrodbtoolkit/AstrodbKit2

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    astroquery
    sqlalchemy>=2.0
    pandas>=1.0.4
    packaging
    specutils>=1.0
    tqdm

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
all =
    astrodbkit[test, docs]
test =
    pytest
    pytest-cov
    pytest-astropy
    darker==1.7.2
    black==23.9.1
    pre-commit==3.4.0
    ruff==0.3.7
docs =
    sphinx-astropy

[options.package_data]
astrodbkit = data/*

[tool:pytest]
testpaths = "astrodbkit"

[coverage:run]
omit =
    astrodbkit/_astropy_init*
    astrodbkit/conftest.py
    astrodbkit/*setup_package*
    astrodbkit/tests/*
    astrodbkit/*/tests/*
    astrodbkit/extern/*
    astrodbkit/version*
    */astrodbkit/_astropy_init*
    */astrodbkit/conftest.py
    */astrodbkit/*setup_package*
    */astrodbkit/tests/*
    */astrodbkit/*/tests/*
    */astrodbkit/extern/*
    */astrodbkit/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
